# OpenISAC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Common.hpp  ConvertSOSToCpp.m  Demodulator_B210.yaml  Demodulator_X310.yaml  DesignPilotPositions.m  LDPC5041008SIMD.cpp  LDPC5041008SIMD.hpp  LDPC_504_1008G.alist  LICENSE  MTI_IIR.fda  Modulator_B210.yaml  Modulator_X310.yaml  OFDMCore.hpp  OFDMDemodulator.cpp  OFDMModulator.cpp  PEGReg504x1008_Gen.alist  README.md  README_zh.md  benchmark_cores.cpp  docker-entrypoint.sh  dpdk_control.sh  environment.openisac-plot.yml  isolate_cpus.bash  plot_bi_sensing.py  plot_bi_sensing_fast.py  plot_channel.py  plot_const.py  plot_pdf.py  plot_sensing.py  plot_sensing_fast.py  requirements.txt  set_performance.bash
capture/: bistatic_md_uav.mat  bistatic_md_with_ota_sync.mat  bistatic_md_without_ota_sync.mat  bistatic_rd_uav.mat  inspect_rd_map.py  monostatic_md_uav.mat  monostatic_rd_with_mti.mat  monostatic_rd_without_mti.mat  plot_saved_maps.py
config/: BS_B210.yaml  BS_B210Tx_X310Rx.yaml  BS_B210_Duplex.yaml  BS_B210_ResourceMap.yaml  BS_Sim.yaml  BS_Sim_Duplex.yaml  BS_Sim_ResourceMap.yaml  BS_Sim_eRTM.yaml  BS_X310.yaml  BS_X310RTxRx.yaml  BS_X310_Duplex.yaml  BS_X310_ResourceMap.yaml  Demodulator_B210.yaml  Demodulator_B210_ResourceMap.yaml  Demodulator_Sim.yaml  Demodulator_X310.yaml  Demodulator_X310_ResourceMap.yaml  Modulator_B210.yaml  Modulator_B210Tx_X310Rx.yaml  Modulator_B210_ResourceMap.yaml  Modulator_Sim.yaml  Modulator_X310.yaml  Modulator_X310RTxRx.yaml  Modulator_X310_ResourceMap.yaml  UE_B210.yaml  UE_B210_Duplex.yaml  UE_B210_ResourceMap.yaml  UE_Sim.yaml  UE_Sim_Duplex.yaml  UE_Sim_ResourceMap.yaml  UE_Sim_eRTM.yaml  UE_X310.yaml  UE_X310_Duplex.yaml  UE_X310_ResourceMap.yaml
docs/: 404.html  CHANNEL_SIMULATOR.md  CHANNEL_SIMULATOR.zh-CN.md  CNAME  OCXO_PPM_MAPPING.md  architecture.html  architecture_zh.html  documentation.html  documentation_zh.html  eRTM_timing_relations_eq6_23.md  index.html  index_zh.html  macos_build.md  macos_build_zh.md  signal_processing.html  signal_processing_zh.html  sitemap-0.xml  sitemap-index.xml  style.css
docs/_astro/: DocsLayout.D3cK1go2.css  HomePage.Bdj7OhQI.css  HomePage.DgUJDAXp.css  common.B_kSIH6_.css  common.Bsh3d0Jh.css
docs/docs/: index.html
docs/docs/reference/: index.html
docs/docs/signal-processing/: index.html
docs/pagefind/: pagefind-component-ui.js  pagefind-entry.json  pagefind.en_1ac7bb4e3b.pf_meta  pagefind.en_2120adf323.pf_meta  pagefind.en_415c519d83.pf_meta  pagefind.en_49927b128e.pf_meta  pagefind.en_71c217894c.pf_meta  pagefind.en_7547bba8db.pf_meta  pagefind.en_89c7d0c917.pf_meta  pagefind.en_9dd9fd5940.pf_meta  pagefind.en_afd9d6a9dd.pf_meta  pagefind.en_f13b435fd7.pf_meta  pagefind.zh-cn_29d767bf9d3b5.pf_meta  pagefind.zh-cn_5a741118baf89.pf_meta  pagefind.zh-cn_6710fb0193064.pf_meta  pagefind.zh-cn_6d33b3edbc843.pf_meta  pagefind.zh-cn_a54d887daa482.pf_meta  pagefind.zh-cn_a85ddaf5ddaba.pf_meta  pagefind.zh-cn_e2a2dc4438ad6.pf_meta  pagefind.zh-cn_e6c35ed672014.pf_meta  pagefind.zh-cn_eaaa4533e2927.pf_meta  pagefind.zh-cn_ef6029f27e45e.pf_meta
docs/pagefind/fragment/: en_12c1c26.pf_fragment  en_14aae5a.pf_fragment  en_19b5e3b.pf_fragment  en_1d0e172.pf_fragment  en_1f61203.pf_fragment  en_20aacbb.pf_fragment  en_238f2e4.pf_fragment  en_2b74727.pf_fragment  en_2fd2772.pf_fragment  en_309676c.pf_fragment  en_31d4a27.pf_fragment  en_322f647.pf_fragment  en_3a59185.pf_fragment  en_3a91852.pf_fragment  en_3a92e04.pf_fragment  en_3bb3808.pf_fragment  en_3d5bcd2.pf_fragment  en_3f4ddd3.pf_fragment  en_41e1b1c.pf_fragment  en_42172d7.pf_fragment  en_44cc8fb.pf_fragment  en_4c9526d.pf_fragment  en_4db6a2b.pf_fragment  en_516a825.pf_fragment  en_5419367.pf_fragment  en_59d2adc.pf_fragment  en_63ee3d2.pf_fragment  en_67f0cb3.pf_fragment  en_688beea.pf_fragment  en_6a169b5.pf_fragment  en_6d84879.pf_fragment  en_6f43a7f.pf_fragment  en_6f909a1.pf_fragment  (+132 more)
docs/zh-cn/: index.html
include/: AsyncLogger.hpp  Common.hpp  LDPCCodec.hpp  OFDMCore.hpp  OFDMDemodulatorCore.hpp  OFDMModulatorCore.hpp  OFDMSignalProcessing.hpp  RadioBackend.hpp  RadioTypes.hpp  SensingChannel.hpp  SensingCore.hpp  ShmRing.hpp  SimBackend.hpp  SimStreamer.hpp  UhdBackend.hpp  UplinkRxEngine.hpp  UplinkTxEngine.hpp  ZmqTransport.hpp
measurement/demodulator_latency_bench/: summary.md
scripts/: backend_sensing_viewer.py  bench_ber_bler_evm.py  bench_ber_bler_evm_bs_template.yaml  bench_ber_bler_evm_demodulator_template.yaml  bench_ber_bler_evm_modulator_template.yaml  bench_ber_bler_evm_ue_template.yaml  bench_bs_cpu.py  bench_bs_cpu_template.yaml  bench_bs_latency.py  bench_bs_latency_template.yaml  bench_bs_sensing_runtime.py  bench_bs_sensing_runtime_template.yaml  bench_demodulator_cpu.py  bench_demodulator_cpu_demodulator_template.yaml  bench_demodulator_cpu_modulator_template.yaml  bench_demodulator_latency.py  bench_demodulator_latency_demodulator_template.yaml  bench_demodulator_latency_modulator_template.yaml  bench_modulator_cpu.py  bench_modulator_cpu_template.yaml  bench_modulator_latency.py  bench_modulator_latency_template.yaml  bench_modulator_sensing_runtime.py  bench_modulator_sensing_runtime_template.yaml  bench_ue_cpu.py  bench_ue_cpu_bs_template.yaml  bench_ue_cpu_ue_template.yaml  bench_ue_latency.py  bench_ue_latency_bs_template.yaml  bench_ue_latency_ue_template.yaml  bench_utils.py  channel_sim_control.py  config_web_editor.css  config_web_editor.html  config_web_editor.js  config_web_editor.py  config_web_editor_schema.yaml  debug_zmq_viewer.py  dpdk_control.bash  isolate_cpus.bash  (+29 more)
scripts/sensing_viewer/: __init__.py  app.py  array_backend.py  config.py  fast_viewer.py  phase_calibration.py  processing.py  runtime.py  ui.py
site/: astro.config.mjs  package-lock.json  package.json
site/public/: documentation.html  documentation_zh.html
src/: AsyncLogger.cpp  BS.cpp  ChannelSimulator.cpp  LDPCCodec.cpp  OFDMDemodulator.cpp  OFDMModulator.cpp  SensingChannel.cpp  SimBackend.cpp  SimStreamer.cpp  UE.cpp  UhdBackend.cpp
tools/: ldpc_fixed_bench.cpp
(+202 files in other folders)
